--- a/vae.ipynb
+++ b/vae.ipynb
@@ -19,12 +19,12 @@
         "id": "OaLe3mRvdSw9"
       },
       "id": "OaLe3mRvdSw9",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "ddc40b02",
       "metadata": {
         "id": "ddc40b02",
@@ -118,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "997db182",
       "metadata": {
         "id": "997db182"
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "e5d8b2ca",
       "metadata": {
         "id": "e5d8b2ca"
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "a8f8d953",
       "metadata": {
         "id": "a8f8d953"
@@ -316,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "fc55ed88",
       "metadata": {
         "id": "fc55ed88"
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "dc356208",
       "metadata": {
         "id": "dc356208"
@@ -397,8 +397,7 @@
         "    # Get closed-form KL divergence and ELBO\n",
         "    KL = get_KL(mean_z, var_z)\n",
         "    ELBO = torch.sum(log_likelhds - beta*KL) * dim['N'] / dim['M']\n",
-        "    return -1.0*ELBO, KL\n",
-        ""
+        "    return -1.0*ELBO, KL\n"
       ]
     },
     {
@@ -413,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "fb3c54f8",
       "metadata": {
         "scrolled": true,
@@ -434,11 +433,11 @@
       ],
       "source": [
         "dim = {\n",
-        "    'x':784, # observation dimensionality, 2 for circle data and 784 for MNIST\n",
+        "    'x':784, # observation dimensionality\n",
         "    'h':500, # hidden layer units\n",
         "    'z':2, # latent space dimensionality\n",
         "    'l':1, # number of z samples per x\n",
-        "    'N':20000, # dataset size\n",
+        "    'N':20000, # dataset size. Using subset to reduce runtime.\n",
         "    'M':100, # batch size\n",
         "}\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -477,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "ddcd2655",
       "metadata": {
         "id": "ddcd2655"
@@ -493,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "b45853f8",
       "metadata": {
         "scrolled": true,
@@ -2124,7 +2123,7 @@
         "    # One epoch:\n",
         "    epoch_loss = 0.0\n",
         "    epoch_KL = 0.0\n",
-        "    for i,(x,y) in enumerate(tqdm(loader)):\n",
+        "    for i,(x,y) in enumerate(loader):\n",
         "        x = (torch.flatten((x - mean_data)/std_data, start_dim=1))\n",
         "        if not ffcv:\n",
         "            x = x.to(device, non_blocking=True)\n",
@@ -2156,7 +2155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "349e58c8",
       "metadata": {
         "id": "349e58c8",
@@ -2194,7 +2193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "6b6ee5cc",
       "metadata": {
         "id": "6b6ee5cc",
@@ -2242,7 +2241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "bc54143e",
       "metadata": {
         "scrolled": false,
@@ -2275,7 +2274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "dcfeb5e8",
       "metadata": {
         "scrolled": false,
@@ -2323,13 +2322,12 @@
         "    # Plot cosmetic changes\n",
         "    fig.tight_layout(rect=[0, 0, 1, 0.97])\n",
         "    fig.subplots_adjust(wspace=0.1,hspace=0.1)\n",
-        "    return imgs\n",
-        ""
+        "    return imgs\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "f895b75f",
       "metadata": {
         "id": "f895b75f"
@@ -2361,13 +2359,12 @@
         "                        loc=\"lower right\", title=\"Classes\",prop={'size': 20},markerscale=4)\n",
         "        ax.add_artist(legend)\n",
         "        ax.set_title(\"Latent space encodings of MNIST training set\",fontsize=20, color=color)\n",
-        "    return\n",
-        ""
+        "    return\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "ad02ec4f",
       "metadata": {
         "id": "ad02ec4f",
@@ -2395,7 +2392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "fc7f1af7",
       "metadata": {
         "scrolled": false,
@@ -2467,7 +2464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "c497c0d5",
       "metadata": {
         "id": "c497c0d5",
